--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,9 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <dependencies>
+
+    </dependencies>
+
 
 </project>
